apps/postgress/temp2-pg.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dep
  namespace: ns-32 # Неймспейс - менять обязательно
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: docker.io/postgres:latest 
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: ns-32 # Неймспейс - менять обязательно
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
