apps/postgress/temp2-py.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-dep
  namespace: ns-32
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: cldcdr42/stop:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
  namespace: ns-32
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
