apps/postgress/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: ns-32  # Specify your namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <my_cool_domain.com>  # Replace with your desired domain name
    http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: python-app-svc  # Name of your Python app service
            port:
              number: 5000  # Port exposed by your Python app service
